--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "chatgpt-cli"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Simple command line tool for chatting with ChatGPT using the official API"
+authors = ["Marco Lardera"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
