Update project meta

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "poetry.core.masonry.api"
 name = "chatgpt-cli"
 version = "0.1.0"
 description = "Simple command line tool for chatting with ChatGPT using the official API"
-authors = ["Marco Lardera"]
-homepage = "https://github.com/marcolardera/chatgpt-cli"
+authors = ["Marco Lardera", "Daniel Souza"] # run 'git shortlog -sne' to get a better list 
+homepage = "https://github.com/danisztls/chatgpt-cli"
 readme = "README.md"
 packages = [
   { include = "chatgpt-cli" },
