mv black to dev deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-black = "^23.1"
 certifi = "^2022.12.7"
 charset-normalizer = "^3.1"
 click = "^8.1"
@@ -32,6 +31,9 @@ tomli = "^2.0"
 typing_extensions = "^4.6"
 urllib3 = "^1.26"
 wcwidth = "0.2"
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.1"
 
 [tool.poetry.scripts]
 llmux = "llmux.interfaces.tui:main"
