--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,10 @@ description = "LLM inference for power users."
 authors = ["Daniel Souza"] # run 'git shortlog -sne' to get a better list 
 homepage = "https://github.com/danisztls/llmux"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 certifi = "^2022.12.7"
 charset-normalizer = "^3.1"
 click = "^8.1"
@@ -20,7 +21,7 @@ markdown-it-py = "^2.2"
 mdurl = "^0.1"
 mypy-extensions = "^1.0"
 packaging = "^23.0"
-pathspec = "0.11"
+pathspec = "^0.11"
 platformdirs = "^3.1"
 prompt-toolkit = "^3.0"
 Pygments = "^2.14"
@@ -30,7 +31,7 @@ rich = "^13.4"
 tomli = "^2.0"
 typing_extensions = "^4.6"
 urllib3 = "^1.26"
-wcwidth = "0.2"
+wcwidth = "^0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1"
